# gish

./: Cargo.toml  README.md  ansi_test  ansi_test.c  color_print  color_print.c  count  count.c  cursor  cursor.c  hidden_test  hidden_test.c  ls.c  new_line  new_line.c  output.txt  pinger  print_delay.py  pyt  q  size  size.c  slave.c  test  test.c  unicode  unicode.c
lua/: on_tick.lua
src/: main.rs
src/ansi/: mod.rs
src/app/: auto_comp.rs  config.rs  mod.rs  new_pane.rs  pane.rs
src/lua/: mod.rs
src/shell/: mod.rs  test.rs  test2.rs
src/ui/: mod.rs
