[package]
name = "gish"
version = "0.1.0"
edition = "2021"
description = "if tmux and zsh had a kid"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.7"
crossterm = "0.26.1"
lazy_static = "1.4.0"
hlua = "0.4.1"
once_cell = "1.17.1"
tui = "0.19.0"
unicode-width = "0.1.10"
anyhow = "1.0.70"
home = "0.5.5"
nix = "0.26.2"
pty = "0.2.2"
openpty = "0.2.0"
libc = "0.2.144"
